--- a/ejercicio3/ejercicio3.html
+++ b/ejercicio3/ejercicio3.html
@@ -13,11 +13,14 @@
     </header>
 
     <section>
-        <h1>Primera seccion con un estilo de sombra</h1>
-        <p>Esto es un parrafo</p>
         <article class="articulo1">
-            <h2>Segundo Articulo</h2>
-            <p>Otro parrafo</p>
+            <h1>TItulo dentro de un articulo</h1>
+            <p>Esto es un parrafo dentro de un articulo</p>
+        </article>
+       
+        <article class="articulo2">
+            <h2>TItulo dentro de un articulo</h2>
+            <p>Esto es un parrafo dentro de un articulo</p>
         </article>
     </section>
 </body>
