--- a/ejercicio4/ejercicio4.html
+++ b/ejercicio4/ejercicio4.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="ejercicio4.css" rel="stylesheet">
-
 </head>
 <body>
     <header>
@@ -14,11 +13,14 @@
     </header>
 
     <section>
-        <h1>Primera seccion con un estilo de sombra</h1>
-        <p>Esto es un parrafo</p>
         <article class="articulo1">
-            <h2>Primer Articulo</h2>
-            <p>Otro parrafo</p>
+            <h1>TItulo dentro de un articulo</h1>
+            <p>Esto es un parrafo dentro de un articulo</p>
+        </article>
+       
+        <article class="articulo2">
+            <h2>Titulo dentro de un articulo</h2>
+            <p>Esto es un parrafo dentro de un articulo</p>
         </article>
     </section>
 </body>
